--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7303,37 +7303,19 @@ td.visible-print {
 .jumbotron {
   margin: 50px auto 0 auto;
 }
-
-#map {
-    height: 100%;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;    
-}
-
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
 }
-
-
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
-
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
   top: 0;
   right: 0;
   left: 0;
   z-index: 20;
 }
-
 /* Flip around the padding for proper display in narrow viewports */
 .navbar-wrapper > .container {
   padding-right: 0;
@@ -7346,11 +7328,8 @@ body {
 .navbar-wrapper .navbar .container {
   width: auto;
 }
-
-
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
-
 /* Carousel base class */
 .carousel {
   height: 500px;
@@ -7360,7 +7339,6 @@ body {
 .carousel-caption {
   z-index: 10;
 }
-
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
@@ -7373,11 +7351,8 @@ body {
   min-width: 100%;
   height: 500px;
 }
-
-
 /* MARKETING CONTENT
 -------------------------------------------------- */
-
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
   margin-bottom: 20px;
@@ -7390,26 +7365,20 @@ body {
   margin-right: 10px;
   margin-left: 10px;
 }
-
-
 /* Featurettes
 ------------------------- */
-
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+  margin: 80px 0;
+  /* Space out the Bootstrap <hr> more */
 }
-
 /* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
 }
-
-
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-
 @media (min-width: 768px) {
   /* Navbar positioning foo */
   .navbar-wrapper .container {
@@ -7420,23 +7389,27 @@ body {
     padding-right: 0;
     padding-left: 0;
   }
-
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
     font-size: 21px;
     line-height: 1.4;
   }
-
   .featurette-heading {
     font-size: 50px;
   }
 }
-
 @media (min-width: 992px) {
   .featurette-heading {
     margin-top: 120px;
   }
 }
-
+/*# sourceMappingURL=/styles/main.css.map */
+#map {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
 /*# sourceMappingURL=/styles/main.css.map */
