--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7412,4 +7412,13 @@ body {
   position: absolute;
   top: 0;
 }
+#info-box {
+  background-color: white;
+  border: 1px solid black;
+  bottom: 30px;
+  height: 20px;
+  padding: 10px;
+  position: absolute;
+  left: 30px;
+}
 /*# sourceMappingURL=/styles/main.css.map */
