--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -146,3 +146,13 @@ body {
     position: absolute;
     top: 0;    
 }
+
+#info-box {
+      background-color: white;
+      border: 1px solid black;
+      bottom: 30px;
+      height: 20px;
+      padding: 10px;
+      position: absolute;
+      left: 30px;
+    }
