--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -149,10 +149,26 @@ body {
 
 #info-box {
       background-color: white;
+      width: 30%;
       border: 1px solid black;
       bottom: 30px;
       height: 20px;
-      padding: 10px;
+      left: 0;
+      bottom: 0;
       position: absolute;
-      left: 30px;
     }
+
+.navbar-brand-i {
+  float: left;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px;
+
+}
+
+.navbar-brand-m {
+  float: left;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px;
+}
