--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -16,7 +16,7 @@
 }
 
 body {
-  padding-bottom: 40px;
+  padding-bottom: 0px;
   color: #5a5a5a;
 }
 
@@ -150,7 +150,6 @@ body {
 #info-box {
       background-color: white;
       width: 30%;
-      border: 1px solid black;
       bottom: 30px;
       height: 20px;
       left: 0;
@@ -171,4 +170,8 @@ body {
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
+}
+
+.navbar {
+  margin-bottom:0px;
 }
