--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7304,7 +7304,7 @@ td.visible-print {
   margin: 50px auto 0 auto;
 }
 body {
-  padding-bottom: 40px;
+  padding-bottom: 0px;
   color: #5a5a5a;
 }
 /* CUSTOMIZE THE NAVBAR
@@ -7332,8 +7332,8 @@ body {
 -------------------------------------------------- */
 /* Carousel base class */
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+  height: 100%;
+  margin-bottom: 0px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -7415,7 +7415,6 @@ body {
 #info-box {
   background-color: white;
   width: 30%;
-  border: 1px solid black;
   bottom: 30px;
   height: 20px;
   left: 0;
@@ -7433,5 +7432,8 @@ body {
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
+}
+.navbar {
+  margin-bottom: 0px;
 }
 /*# sourceMappingURL=/styles/main.css.map */
